Add educational CONCEPT/PURPOSE/FLOW comments across all 5 Spring Boot service modules
Adds structured explanatory comments (concept being used, why the
class/method exists, step-by-step flow, why this approach was chosen,
how it interacts with other layers, and what Java/Spring/design-pattern
concepts to learn) around classes, interfaces, controllers, services,
DTOs, configuration, security, and AI/LLM integration code in rag-service,
rag-assistant-service, banking-support-service-uc5,
banking-support-service-uc6, and observability-service.

No behavior, logic, naming, or structure changed -- comments only,
verified by diffing for any removed non-comment lines and by a full
mvn compile of all 5 modules.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>